# sleipnir

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md
src/: main.rs
src/libs/: mod.rs
src/libs/ch/: mod.rs
src/libs/config/: mod.rs  tests.rs
src/libs/graphite/: mod.rs  tests.rs
src/libs/obf/: mod.rs  tests.rs
src/libs/prometheus/: mod.rs
src/libs/server/: mod.rs  tests.rs
tests/: .env  Dockerfile  README.md  docker-compose.yaml
tests/clickhouse/: prometheus.xml
tests/clickhouse/init/: init  init.sql
tests/grafana/dashboards/: clickhouse.json  sleipnir.json
tests/grafana/provisioning/dashboards/: dashboards.yml
tests/prometheus/: prometheus.yml
tests/py/: .dockerignore  Dockerfile  generate-metrics-names.py  generator.py
