[package]
name = "sleipnir"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["net", "io-util", "rt-multi-thread", "macros"] }
log = "0.4.28"
env_logger = "0.11.8"
dotenvy = "0.15.7"
envy = "0.4.2"
serde = { version = "1.0.225", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1.47.1", features = ["net", "io-util", "rt-multi-thread", "time", "macros"] }
serial_test = "3.2.0"
