[package]
name = "sleipnir"
version = "0.1.1"
edition = "2024"
authors = ["Oberon Systems <info@oberon.systems>"]
description = "Graphite to Clickhouse Metrics Obfuscation"
license = "MIT"
repository = "https://github.com/oberon-systems/sleipnir"
readme = "README.md"
keywords = ["clickhouse", "graphite", "obfuscatation", "metrics"]
categories = ["command-line-utilities", "development-tools"]

include = [
    "/Cargo.toml",
    "/Cargo.lock",
    "/README.md",
    "/LICENSE",
    "src/**/*",
]

[[bin]]
name = "sleipnir"
path = "src/main.rs"

[package.metadata.generate-rpm]
assets = [
    { source = "target/x86_64-unknown-linux-musl/release/sleipnir", dest = "/usr/bin/sleipnir", mode = "555" }
]

[dependencies]
clickhouse = { version = "0.14", features = ["native-tls"] }
tokio = { version = "1.47.1", features = ["net", "io-util", "rt-multi-thread", "macros"] }
log = "0.4.28"
env_logger = "0.11.8"
dotenvy = "0.15.7"
envy = "0.4.2"
serde = { version = "1.0.225", features = ["derive"] }

[dependencies.openssl]
version = "*"
features = ["vendored"]

[dev-dependencies]
tokio = { version = "1.47.1", features = ["net", "io-util", "rt-multi-thread", "time", "macros"] }
serial_test = "3.2.0"
